--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,13 @@ nav {
  	font-weight: bolder;
  }
 
+
+#superhero-input {
+	display: flex;
+	justify-content: center;
+	margin: auto;
+}
+
  input {
  	color: white;
 
@@ -91,7 +98,7 @@ img {
 	width: 90%;
 }
 
-/* #celeb-input {
+/* #superhero-input {
 	width: 300px;
 } */
 
@@ -103,7 +110,7 @@ img {
 	justify-content: center;
 }
 
-/* #addCeleb {
+/* #addsuperhero {
 	margin-left: 30px;
 } */
 
